tests/ui/cilk/proper_scoping_of_variables_in_spawned_block.stderr
error[E0425]: cannot find value `y` in this scope
  --> $DIR/proper_scoping_of_variables_in_spawned_block.rs:4:22
   |
LL |     println!("y={}", y);
   |                      ^
   |
help: the binding `y` is available in a different scope in the same function
  --> $DIR/proper_scoping_of_variables_in_spawned_block.rs:3:30
   |
LL |     let _ = cilk_spawn { let y = 5; y };
   |                              ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
